Remove local debug ip

--- a/guntest.html
+++ b/guntest.html
@@ -21,7 +21,7 @@
 <script>
 
   gun = Gun({
-    peers: ['https://gun.shock.network/gun','https://gun-eu.shock.network/gun', 'http://danlugo92.tech:8765/gun', 'http://192.168.1.21:8765/gun'],
+    peers: ['https://gun.shock.network/gun','https://gun-eu.shock.network/gun', 'http://danlugo92.tech:8765/gun'],
     axe: false
   })
 
